--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "icon": "icon.png",
   "icon_color": "black",
   "version": "0.0.1",
-  "author": "Brendan Collins",
+  "author": "Brendan Collins and Bill Young",
   "website": "http://www.shopbottools.com",
   "description": "A simple app experiment with a game interface"
 }
