worked on icon and other fixes

--- a/package.json
+++ b/package.json
@@ -6,5 +6,5 @@
   "version": "0.0.1",
   "author": "Brendan Collins and Bill Young",
   "website": "http://www.shopbottools.com",
-  "description": "A simple app experiment with a game interface"
+  "description": "A simple app experiment with a gameish interface"
 }
